# Python_Course_WS24

./: README.md  biomarker.csv  pyproject.toml
advanced/: day_1.ipynb  first_day.ipynb  functions.py
advanced/tests/: test_functions.py
beginner/: day_1_exercises.ipynb  day_1_recap.ipynb  day_2_exercises.ipynb  day_2_recap.ipynb  day_3_exercises.ipynb  day_3_recap.ipynb  day_4_exercises.ipynb  day_4_recap.ipynb  introduction.ipynb  stats.csv  test.fa
exam/: solve_example_challenge.ipynb
src/pycourse24/: __init__.py
