[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycourse24"
version = "0.0.1"
authors = [
  { name="Markus Ankenbrand", email="markus.ankenbrand@uni-wuerzburg.de" },
]
description = "Python Course WS24/25"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/BioMeDS/Python_Course_WS24"
Issues = "https://github.com/BioMeDS/Python_Course_WS24/issues"
